--- a/pages/18681.html
+++ b/pages/18681.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      degree of a coherent sheaf in nLab
+      magnetic dipole moment in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      degree of a coherent sheaf
+      magnetic dipole moment
   </h1>
 
 
@@ -308,69 +308,67 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#definition'>Definition</a></li><li><a href='#in_complex_analytic_geometry'>In complex analytic geometry</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>The concept of <em>degree</em> of a <a class='existingWikiWord' href='/nlab/show/coherent+sheaf'>coherent sheaf</a> is a generalization of the concept of <a class='existingWikiWord' href='/nlab/show/first+Chern+class'>first Chern class</a> of a <a class='existingWikiWord' href='/nlab/show/line+bundle'>line bundle</a> (to which it reduces for coherent sheaves of <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of <a class='existingWikiWord' href='/nlab/show/holomorphic+vector+bundle'>holomorphic line bundles</a> over <a class='existingWikiWord' href='/nlab/show/Riemann+surface'>Riemann surfaces</a> in <a class='existingWikiWord' href='/nlab/show/complex+geometry'>complex analytic geometry</a>, see at <em><a href='first+Chern+class#InComplexAnalyticGeometry'>first Chern class – In complex analytic geometry</a></em>).</p>
-
-<h2 id='definition'>Definition</h2>
-
-<p>Discussion of degrees of coherent sheaves over <a class='existingWikiWord' href='/nlab/show/complex+curve'>complex curves</a> is in e.g. (<a href='#HuybrechtsLehn96'>Huybrechts-Lehn 96, def. 1.2.11</a>).</p>
-
-<p>On a <a class='existingWikiWord' href='/nlab/show/compact+space'>compact</a> <a class='existingWikiWord' href='/nlab/show/K%C3%A4hler+manifold'>Kähler manifold</a> <math class='maruku-mathml' display='inline' id='mathml_df40216b9e84240d37cb20b95a9879c3a9a938e5_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>X</mi><mo>,</mo><mi>ω</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(X,\omega)</annotation></semantics></math> of complex <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_df40216b9e84240d37cb20b95a9879c3a9a938e5_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>, then the degree of a <a class='existingWikiWord' href='/nlab/show/torsion+subgroup'>torsion</a>-free <a class='existingWikiWord' href='/nlab/show/holomorphic+vector+bundle'>holomorphic vector bundle</a> <math class='maruku-mathml' display='inline' id='mathml_df40216b9e84240d37cb20b95a9879c3a9a938e5_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/integration+of+differential+forms'>integral of differential forms</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_df40216b9e84240d37cb20b95a9879c3a9a938e5_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>deg</mi><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>=</mo><msub><mo>∫</mo> <mi>X</mi></msub><msub><mi>c</mi> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>E</mi><mo stretchy='false'>)</mo><mo>∧</mo><msup><mi>ω</mi> <mrow><msub><mo>∧</mo> <mrow><mi>n</mi><mo>−</mo><mn>1</mn></mrow></msub></mrow></msup></mrow><annotation encoding='application/x-tex'>
-  deg(E)
-  =
-  \int_X c_1(E) \wedge \omega^{\wedge_{n-1}}
-
-</annotation></semantics></math></div>
-<p>of the <a class='existingWikiWord' href='/nlab/show/de+Rham+complex'>de Rham representative</a> of the actual <a class='existingWikiWord' href='/nlab/show/first+Chern+class'>first Chern class</a> of <math class='maruku-mathml' display='inline' id='mathml_df40216b9e84240d37cb20b95a9879c3a9a938e5_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math> wedge with copies of the given <a class='existingWikiWord' href='/nlab/show/symplectic+manifold'>symplectic form</a> (e.g. <a href='#ScheinostSchottenloher96'>Scheinost-Schottenloher 96, def. 1.14</a>).</p>
-
-<h2 id='in_complex_analytic_geometry'>In complex analytic geometry</h2>
-
-<h2 id='related_concepts'>Related concepts</h2>
+    <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/slope+of+a+coherent+sheaf'>slope of a coherent sheaf</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/magnetic+field'>magnetic field</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/stable+vector+bundle'>stable vector bundle</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/magnetic+charge'>magnetic charge</a></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
 
-<ul>
-<li id='HuybrechtsLehn96'>
-<p><a class='existingWikiWord' href='/nlab/show/Daniel+Huybrechts'>Daniel Huybrechts</a>, <a class='existingWikiWord' href='/nlab/show/Manfred+Lehn'>Manfred Lehn</a>, <em>The Geometry of the Moduli Spaces of Sheaves</em>, 1996 (<a class='existingWikiWord' href='/nlab/files/HuybrechtsLehn.pdf' title='pdf'>pdf</a>)</p>
-</li>
+<h4 id='general'>General</h4>
 
-<li id='ScheinostSchottenloher96'>
-<p>Peter Scheinost, <a class='existingWikiWord' href='/nlab/show/Martin+Schottenloher'>Martin Schottenloher</a>, <em>Metaplectic quantization of the moduli spaces of flat and parabolic bundles</em>, J. reine angew. Mathematik, 466 (1996) (<a href='https://eudml.org/doc/153753'>web</a>)</p>
-</li>
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Magnetic_moment'>Magnetic moment</a></em></li>
 </ul>
+
+<h3 id='anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</h3>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</a></em></li>
+</ul>
+
+<p>The computation of the anomalous magnetic dipole moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> is spelled out (via <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>) in</p>
+
+<ul>
+<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.10, culminating in (3.10.20), of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
+</ul>
+
+<p>
+</p>
+
+<p>
+ 
+</p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2017 06:52:12 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (192.76.8.87)
+  Created on October 16, 2017 06:46:04 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/degree+of+a+coherent+sheaf" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/degree+of+a+coherent+sheaf/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/degree+of+a+coherent+sheaf" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/degree+of+a+coherent+sheaf" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/degree+of+a+coherent+sheaf" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/magnetic+dipole+moment" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/degree+of+a+coherent+sheaf" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/magnetic+dipole+moment" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/degree+of+a+coherent+sheaf" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/magnetic+dipole+moment" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
