--- a/pages/9126.html
+++ b/pages/9126.html
@@ -914,6 +914,10 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/magnetic+charge'>magnetic charge</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>magnetic dipole moment</a></p>
+</li>
 </ul>
 
 <p>
@@ -921,14 +925,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 13, 2013 00:24:12 
+  Revised on October 16, 2017 06:07:05 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (131.174.43.123)
+  (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/magnetic+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/magnetic+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/magnetic+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+field/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/magnetic+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
