--- a/pages/18681.html
+++ b/pages/18681.html
@@ -353,14 +353,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 16, 2017 06:46:04 
+  Revised on October 16, 2017 09:06:31 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+dipole+moment/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/magnetic+dipole+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+dipole+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
