--- a/pages/1788.html
+++ b/pages/1788.html
@@ -309,17 +309,19 @@ margin-left: 0em;
 
 <div id="revision">
     <p>…</p>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_ce1a7fcd1d9af104de5d57aa25a4e2b6c2719bad_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>x</mi><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mspace width='negativethinmathspace'></mspace><mo stretchy='false'>/</mo></mrow><annotation encoding='application/x-tex'> x\!\!\!/ </annotation></semantics></math></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2017 09:06:51 
+  Revised on October 16, 2017 11:22:10 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1151" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1151 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1152" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1152 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
