--- a/pages/18688.html
+++ b/pages/18688.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      magnetic dipole moment in nLab
+      Othmar Steinmann in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      magnetic dipole moment
+      Othmar Steinmann
   </h1>
 
 
@@ -308,73 +308,36 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/magnetic+field'>magnetic field</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/magnetic+charge'>magnetic charge</a></p>
-</li>
+    <ul>
+<li><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=121837'>Mathematics Genealgy page</a></li>
 </ul>
 
-<h2 id='references'>References</h2>
-
-<h4 id='general'>General</h4>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d503a585557d8f209556f0493403b65769a68388_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Magnetic_moment'>Magnetic moment</a></em></li>
+<li><a class='existingWikiWord' href='/nlab/show/magnetic+dipole+moment'>anomalous magnetic moment of the electron</a></li>
 </ul>
 
-<h3 id='anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</h3>
-
-<ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment'>Anomalous magnetic dipole moment</a></em></li>
-</ul>
-
-<p>The computation of the anomalous magnetic dipole moment of the <a class='existingWikiWord' href='/nlab/show/electron'>electron</a> in <a class='existingWikiWord' href='/nlab/show/quantum+electrodynamics'>QED</a> is spelled out (via <a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>) in</p>
-
-<ul>
-<li id='Scharf95'><a class='existingWikiWord' href='/nlab/show/G%C3%BCnter+Scharf'>Günter Scharf</a>, section 3.10, culminating in (3.10.20), of <em><a class='existingWikiWord' href='/nlab/show/Finite+Quantum+Electrodynamics+--+The+Causal+Approach'>Finite Quantum Electrodynamics -- The Causal Approach</a></em>, Berlin: Springer-Verlag, 1995, 2nd edition</li>
-</ul>
-
-<p>For more see</p>
-
-<ul>
-<li id='Steinmann02'><a class='existingWikiWord' href='/nlab/show/Othmar+Steinmann'>Othmar Steinmann</a>, <em>What is the Magnetic Moment of the Electron?</em>, Commun.Math.Phys. 237 (2003) 181-201 (<a href='https://arxiv.org/abs/hep-ph/0211187'>arXiv:hep-ph/0211187</a>)</li>
-</ul>
-
-<p>
-</p>
-
-<p>
- 
-</p>
-
-<p>
- 
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 16, 2017 22:05:12 
+  Created on October 16, 2017 22:07:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/magnetic+dipole+moment" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/magnetic+dipole+moment/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/magnetic+dipole+moment" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/magnetic+dipole+moment" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Othmar+Steinmann" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/magnetic+dipole+moment" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Othmar+Steinmann" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/magnetic+dipole+moment" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Othmar+Steinmann" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/magnetic+dipole+moment" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Othmar+Steinmann" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
