--- a/pages/18683.html
+++ b/pages/18683.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,11 +312,13 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#reference'>Reference</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, specifically in <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a>, the <em>Dirac field</em> of <em><a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> field</em> is the kind of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> whose <a class='existingWikiWord' href='/nlab/show/particle'>quanta</a> are the <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, such as <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>, <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrinos</a> and <a class='existingWikiWord' href='/nlab/show/muon'>muons</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>, specifically in <a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a>, a <em>Dirac field</em> is an <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagentially</a> charged and possibly <a class='existingWikiWord' href='/nlab/show/mass'>massive</a> a <em><a class='existingWikiWord' href='/nlab/show/fermion'>fermionic</a> <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> field</em>.</p>
 
-<p>Mathematically, the Dirac field is the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> whose <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> is a <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor bundle</a> in <a class='existingWikiWord' href='/nlab/show/supergeometry'>odd super-degree</a> and whose <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a> is a <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a>.</p>
+<p>This includes <a class='existingWikiWord' href='/nlab/show/fermion'>fermions</a> in the <a class='existingWikiWord' href='/nlab/show/standard+model+of+particle+physics'>standard model of particle physics</a>, such as <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>, <a class='existingWikiWord' href='/nlab/show/quark'>quarks</a>, <a class='existingWikiWord' href='/nlab/show/neutrino'>neutrinos</a> and <a class='existingWikiWord' href='/nlab/show/muon'>muons</a>, after the <a class='existingWikiWord' href='/nlab/show/Higgs+field'>Higgs mechanism</a> has equipped them with <a class='existingWikiWord' href='/nlab/show/mass'>mass</a>.</p>
 
-<p>Notice that there are other <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> which would not be called “Dirac fields”. For example the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> field would be called a <em><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></em>.</p>
+<p>Mathematically, the Dirac field is the <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>field</a> whose <a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a> is a <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor bundle</a> with typical <a class='existingWikiWord' href='/nlab/show/fiber'>fiber</a> a <a class='existingWikiWord' href='/nlab/show/Dirac+spinor'>Dirac representation</a> in <a class='existingWikiWord' href='/nlab/show/supergeometry'>odd super-degree</a> and whose <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a> is a <a class='existingWikiWord' href='/nlab/show/Dirac+equation'>Dirac equation</a>.</p>
+
+<p>Notice that there are other <a class='existingWikiWord' href='/nlab/show/spinor+bundle'>spinor</a> <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>fields</a> which would not be called “Dirac fields”, such as those transforming in a <a class='existingWikiWord' href='/nlab/show/Majorana+spinor'>Majorana representation</a> or a <a class='existingWikiWord' href='/nlab/show/Weyl+spinor'>Weyl representation</a>, or for example the <a class='existingWikiWord' href='/nlab/show/gravitino'>gravitino</a> field which would be called a <em><a class='existingWikiWord' href='/nlab/show/Rarita-Schwinger+field'>Rarita-Schwinger field</a></em>.</p>
 
 <h2 id='reference'>Reference</h2>
 
@@ -337,14 +339,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 16, 2017 07:14:10 
+  Revised on October 17, 2017 01:09:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dirac+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+field/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dirac+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
