--- a/pages/18692.html
+++ b/pages/18692.html
@@ -312,10 +312,18 @@ margin-left: 0em;
 
 <p>Usually these are called simply <strong>tangent categories</strong>, but on the nLab the page <a class='existingWikiWord' href='/nlab/show/tangent+category'>tangent category</a> is about “the tangent category of a given category” constructed by abelianization. In other words, tangent bundle categories are about <em>abstraction</em> of the tangent bundle construction, while tangent categories are a <em>categorification</em> thereof (in some vague sense).</p>
 
+<h2 id='references'>References</h2>
+
 <p>The definition is due to</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Ji%C5%99%C3%AD+Rosick%C3%BD'>Jiri Rosicky</a>, Abstract tangent functors. Diagrammes 12 (1984)</li>
+</ul>
+
+<p>Representation of this tangent structure as exponentiation by a tangent vector is given in</p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Richard+Garner'>Richard Garner</a>, <em>An embedding theorem for tangent categories</em>, (<a href='https://arxiv.org/abs/1704.08386'>arXiv:1704.08386</a>)</li>
 </ul>
 
 <p>
@@ -323,14 +331,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on October 17, 2017 02:20:16 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  Revised on October 17, 2017 03:12:57 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (217.39.117.243)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/tangent+bundle+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/tangent+bundle+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/tangent+bundle+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/tangent+bundle+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/tangent+bundle+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
