--- a/pages/17321.html
+++ b/pages/17321.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -312,7 +312,9 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, a type may be classed as having a polarity, either <a class='existingWikiWord' href='/nlab/show/positive+type'>positive</a> or <a class='existingWikiWord' href='/nlab/show/negative+type'>negative</a>, according to whether its <em>constructors</em> or <em>eliminators</em> are regarded as primary. The idea is due to <a class='existingWikiWord' href='/nlab/show/Jean-Marc+Andreoli'>Jean-Marc Andreoli</a> and <a class='existingWikiWord' href='/nlab/show/Jean-Yves+Girard'>Jean-Yves Girard</a>.</p>
 
-<p>Positive types are inductively defined by their introduction rules and correspond to <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a>; negative types are coinductively defined by their elimination rules and correspond to <a class='existingWikiWord' href='/nlab/show/limit'>limits</a>. Some types may be defined as both positive and negative, see, for instance, <a class='existingWikiWord' href='/nlab/show/product+type'>product type</a>.</p>
+<p>Positive types are inductively defined by their introduction rules and correspond to <a class='existingWikiWord' href='/nlab/show/colimit'>colimits</a> and other “mapping-out” <a class='existingWikiWord' href='/nlab/show/universal+construction'>universal properties</a>; negative types are coinductively defined by their elimination rules and correspond to <a class='existingWikiWord' href='/nlab/show/limit'>limits</a> and other “mapping-in” universal properties. Some types may be defined as both positive and negative, see, for instance, <a class='existingWikiWord' href='/nlab/show/product+type'>product type</a>.</p>
+
+<p>Generally, in effectful languages, the <a class='existingWikiWord' href='/nlab/show/positive+type'>positive types</a> are better behaved in <span class='newWikiWord'>call-by-value<a href='/nlab/new/call-by-value'>?</a></span> evaluation strategies and <a class='existingWikiWord' href='/nlab/show/negative+type'>negative types</a> are better behaved in <span class='newWikiWord'>call-by-name<a href='/nlab/new/call-by-name'>?</a></span> and other <span class='newWikiWord'>lazy evaluation<a href='/nlab/new/lazy+evaluation'>?</a></span> strategies. A category-theoretic explanation of this fact is that <span class='newWikiWord'>call-by-value<a href='/nlab/new/call-by-value'>?</a></span> languages can be modeled by the <a class='existingWikiWord' href='/nlab/show/Kleisli+category'>Kleisli category</a> of a monad <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>T</mi></mrow><annotation encoding='application/x-tex'>T</annotation></semantics></math> on a category <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math>. Usually, the category <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> will have both limits (negatives) and colimits (positives), however the canonical functor <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>F</mi><mo>:</mo><mi>C</mi><mo>→</mo><msub><mi>C</mi> <mi>T</mi></msub></mrow><annotation encoding='application/x-tex'>F : C \to C_T</annotation></semantics></math> is a left adjoint so it only generally preserves the colimits (positives). Dually, call-by-name languages can be modeled by the Kleisli category of a <a class='existingWikiWord' href='/nlab/show/comonad'>comonad</a> <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> and the canonical functor <math class='maruku-mathml' display='inline' id='mathml_c738c5bc8c158531ba7d633a06627d9faac71532_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi><mo>:</mo><mi>C</mi><mo>→</mo><msub><mi>C</mi> <mi>W</mi></msub></mrow><annotation encoding='application/x-tex'>U : C \to C_W</annotation></semantics></math> is a right adjoint, and so preserves limits (negatives).</p>
 
 <h3 id='related_concepts'>Related concepts</h3>
 
@@ -334,14 +336,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 23, 2016 12:27:37 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (91.125.246.222)
+  Revised on October 17, 2017 12:54:47 
+  by <a class="existingWikiWord" href="/nlab/show/Max+S.+New">Max S. New</a>
+  (129.10.110.48)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/polarity+in+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polarity+in+type+theory/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/polarity+in+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polarity+in+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/polarity+in+type+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/polarity+in+type+theory/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/polarity+in+type+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/polarity+in+type+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
