--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,33 +308,20 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_212dd81891165a6ca041f8f04bbe982e70d3bf9a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mi>i</mi><msup><mi>γ</mi> <mi>μ</mi></msup><msub><mo>∂</mo> <mi>μ</mi></msub><mo>+</mo><mi>m</mi><mo>)</mo></mrow><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>i</mi><msup><mi>γ</mi> <mi>μ</mi></msup><msub><mo>∂</mo> <mi>μ</mi></msub><mo>+</mo><mi>m</mi><mo>)</mo></mrow><mi>ψ</mi></mtd> <mtd><mo>=</mo><mrow><mo>(</mo><msub><mo>∂</mo> <mi>μ</mi></msub><msup><mo>∂</mo> <mi>μ</mi></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo>)</mo></mrow><mi>ψ</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mrow><mo>(</mo><mo>□</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo>)</mo></mrow><mi>ψ</mi></mtd></mtr></mtable></mrow><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
-  \begin{aligned}
-    \left(
-      +i \gamma^\mu \partial_\mu + m
-    \right)
-    \left(-i \gamma^\mu \partial_\mu + m\right)\psi 
-    &amp; 
-    =
-    \left(\partial_\mu \partial^\mu + m^2\right) \psi
-    \\
-    &amp; =
-    \left(\Box + m^2\right) \psi
-  \end{aligned}
-  \,.
-
-</annotation></semantics></math></div>
+    <ul>
+<li>P. P. Kulish <a class='existingWikiWord' href='/nlab/show/Ludvig+Faddeev'>Ludwig Faddeev</a>, <em>Asymptotic conditions and infrared divergences in quantum electrodynamics</em>, Theoretical and Mathematical Physics June 1970, Volume 4, Issue 2, pp 745–757 (<a href='http://www.mathnet.ru/php/archive.phtml?wshow=paper&amp;jrnid=tmf&amp;paperid=4141&amp;option_lang=eng'>mathnet.ru</a>, <a href='https://link.springer.com/article/10.1007%2FBF01066485'>springer</a>)</li>
+</ul>
 </div>
 
 <div class="revisedby">
-  Revised on October 17, 2017 12:46:33 
+  Revised on October 17, 2017 18:45:18 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.50.90)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1156" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1156 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1157" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1157 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
