--- a/pages/10428.html
+++ b/pages/10428.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -950,19 +950,17 @@ margin-left: 0em;
 
 <h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#general_idea'>General Idea</a></li><li><a href='#history'>History</a></li><li><a href='#in_quantum_mechanics'>In quantum mechanics</a><ul><li><a href='#bohrification'>Bohrification</a></li><li><a href='#RelationToInterpretationOfQM'>Relation to interpretation of QM</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<p><em>page under construction</em></p>
-
 <h2 id='general_idea'>General Idea</h2>
 
-<p><strong>Coordination</strong> concerns the relationship between <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>scientific theory</a> and <a class='existingWikiWord' href='/nlab/show/experimental+observation'>empirical data</a>. A <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>physical theory</a>, written say as a set of <a class='existingWikiWord' href='/nlab/show/equation'>equations</a> or similar data, does not by itself allow the formation of predictions. In addition we need some way of mediating between this theory and what our instruments can detect about the <a class='existingWikiWord' href='/nlab/show/observable'>universe</a>.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/philosophy+of+science'>philosophy of science</a> and specifically in the <a class='existingWikiWord' href='/nlab/show/philosophy+of+physics'>philosophy of physics</a>, <strong>coordination</strong> concerns the relationship between <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>scientific theory</a> and <a class='existingWikiWord' href='/nlab/show/experimental+observation'>empirical data</a>. A <a class='existingWikiWord' href='/nlab/show/theory+%28physics%29'>physical theory</a>, written, say, as a set of <a class='existingWikiWord' href='/nlab/show/equation'>equations</a> or similar data, does not by itself allow the formation of predictions. In addition we need some way of mediating between this theory and what instruments can detect about the <a class='existingWikiWord' href='/nlab/show/observable+universe'>observable universe</a>.</p>
 
-<p>For example, to connect <a class='existingWikiWord' href='/nlab/show/Einstein+equation'>Einstein&#39;s equations</a> about the <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> of <a class='existingWikiWord' href='/nlab/show/spacetime'>space-time</a> to predicted observations of the direction of light coming from distant stars and passing close to the sun, general relativity postulates that light follows a null <a class='existingWikiWord' href='/nlab/show/geodesic'>geodesic</a>.</p>
+<p>For example an abstract <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a> on the <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of some abstract <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> does not constitute a theory of physics unless one specifies which kind of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>physical field</a> these sections are meant to represent.</p>
 
 <h2 id='history'>History</h2>
 
 <p>The term <em>coordination</em> is a translation of the German <em>Zuordnung</em>. The latter has a long history of use with <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> as something like <em>assignment</em>, hence <em><a class='existingWikiWord' href='/nlab/show/function'>function</a></em>. Its use in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> stretches back to <a class='existingWikiWord' href='/nlab/show/Hermann+von+Helmholtz'>Hermann von Helmholtz</a>’s <em>Zeichentheorie</em>, and was taken up later by a number of philosophers, especially by those, such as Ernst Cassirer, trying to understand the implications for epistemology of the profound transformations which took place in mathematics and physics at the turn of the nineteenth century (<a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a>, <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a>).</p>
 
-<p>In his <em>Allgemeine Erkenntnislehre</em> (1918), Moritz Schlick (<a href='#Schlick18}'>Schlick18</a> relies heavily on the notion of coordination, proposing that it should be understood as a simple <a class='existingWikiWord' href='/nlab/show/set+theory'>set-theoretic</a> <a class='existingWikiWord' href='/nlab/show/map'>mapping</a> between the system of implicitly defined terms of a physical theory and some system of given objects or elements of sensation. A few years later, Hans Reichenbach, by contrast, argued that the act of coordination was no mere mapping between existing systems, but itself played a constitutive role in defining the objects of knowledge themselves.</p>
+<p>In his <em>Allgemeine Erkenntnislehre</em> (1918), Moritz Schlick (<a href='#Schlick18}'>Schlick18</a>) relies heavily on the notion of coordination, proposing that it should be understood as a simple <a class='existingWikiWord' href='/nlab/show/set+theory'>set-theoretic</a> <a class='existingWikiWord' href='/nlab/show/map'>mapping</a> between the system of implicitly defined terms of a physical theory and some system of given objects or elements of sensation. A few years later, Hans Reichenbach, by contrast, argued (<a href='#Reichenbach24'>Reichenbach 24</a>) that the act of coordination was no mere mapping between existing systems, but itself played a constitutive role in defining the objects of knowledge themselves:</p>
 
 <blockquote>
 <p>The difficulty concerning coordinative definitions is similar to that concerning elementary facts: the physical thing that is coordinated is not an immediate perceptual experience but must be constructed from such experience by means of an interpretation. If I establish the coordinative definition “a light ray is a straight line”, then the coordinated physical thing, the light ray, is a construction going beyond perception. (<a href='#Reichenbach24'>1924</a>, p. 8)</p>
@@ -980,7 +978,7 @@ margin-left: 0em;
 
 <p>Coordination is different from – in fact somewhat orthogonal to – <a class='existingWikiWord' href='/nlab/show/interpretation+of+quantum+mechanics'>interpretation of quantum mechanics</a>. For instance a coordination in <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a> involves relating <a class='existingWikiWord' href='/nlab/show/self-adjoint+operator'>self-adjoint operators</a> to certain <a class='existingWikiWord' href='/nlab/show/experimental+observation'>experiments</a>. Given this coordination, the theory assigns <a class='existingWikiWord' href='/nlab/show/expectation+value'>expectation values</a> for the outcomes of the experiment, but it does not necessarily offer an “interpretation why” these propbabilities are predicted.</p>
 
-<p>On the other hand, it might be that a good formulation of the coordination process makes the need/desire for interpretations diminish. This was argued by (<a href='#Tanona10'>Tanona 10</a>)</p>
+<p>On the other hand, it might be that a good formulation of the coordination process makes the need/desire for interpretations diminish. This was argued by (<a href='#Tanona10'>Tanona 10</a>):</p>
 
 <blockquote>
 <p>…the characterization of collapse as a separate physical process is misguided because the phenomenon which collapse is supposed to address concerns not an actual process within quantum mechanical theory but rather the coordination between empirical measurements and representations of quantum systems. Until we first get clear on this relationship, it is premature to propose new processes to account for features of that relationship.</p>
@@ -1009,16 +1007,16 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
-<p id='Reichenbach24'>Hans Reichenbach (1969). <em>Axiomatization of the Theory of Relativity</em>. Berkeley: University of California Press. Original German edition published in 1924.</p>
+<li id='Schlick18'>
+<p>Moritz Schlick, <em>Allgemeine Erkenntnislehre</em> (1918)</p>
 </li>
 
-<li>
-<p id='Ryckman91'>Thomas Ryckman (1991), <em>Conditio sine qua non? Zuordnung in the Early Epistemologies of Cassirer and Schlick</em>, Synthese 88(1), pp. 57-95.</p>
+<li id='Reichenbach24'>
+<p>Hans Reichenbach, <em>Axiomatization of the Theory of Relativity</em>. Berkeley: University of California Press. (1969). Original German edition published in 1924.</p>
 </li>
 
-<li>
-<p id='Schlick18'>Moritz Schlick (1918), <em>Allgemeine Erkenntnislehre</em>.</p>
+<li id='Ryckman91'>
+<p>Thomas Ryckman (1991), <em>Conditio sine qua non? Zuordnung in the Early Epistemologies of Cassirer and Schlick</em>, Synthese 88(1), pp. 57-95.</p>
 </li>
 
 <li>
@@ -1028,14 +1026,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June  6, 2017 07:09:53 
+  Revised on October 19, 2017 03:55:51 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (88.77.226.246)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coordination" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordination/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/coordination" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordination" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coordination" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordination/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/coordination" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordination" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
