--- a/pages/10428.html
+++ b/pages/10428.html
@@ -960,7 +960,7 @@ margin-left: 0em;
 
 <p>The term <em>coordination</em> is a translation of the German <em>Zuordnung</em>. The latter has a long history of use with <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> as something like <em>assignment</em>, hence <em><a class='existingWikiWord' href='/nlab/show/function'>function</a></em>. Its use in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> stretches back to <a class='existingWikiWord' href='/nlab/show/Hermann+von+Helmholtz'>Hermann von Helmholtz</a>’s <em>Zeichentheorie</em>, and was taken up later by a number of philosophers, especially by those, such as Ernst Cassirer, trying to understand the implications for epistemology of the profound transformations which took place in mathematics and physics at the turn of the nineteenth century (<a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a>, <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a>).</p>
 
-<p>In his <em>Allgemeine Erkenntnislehre</em> (1918), Moritz Schlick (<a href='#Schlick18}'>Schlick18</a>) relies heavily on the notion of coordination, proposing that it should be understood as a simple <a class='existingWikiWord' href='/nlab/show/set+theory'>set-theoretic</a> <a class='existingWikiWord' href='/nlab/show/map'>mapping</a> between the system of implicitly defined terms of a physical theory and some system of given objects or elements of sensation. A few years later, Hans Reichenbach, by contrast, argued (<a href='#Reichenbach24'>Reichenbach 24</a>) that the act of coordination was no mere mapping between existing systems, but itself played a constitutive role in defining the objects of knowledge themselves:</p>
+<p>In his <em>Allgemeine Erkenntnislehre</em> (<a href='#Schlick18}'>Schlick18</a>), Moritz Schlick relies heavily on the notion of coordination, proposing that it should be understood as a simple <a class='existingWikiWord' href='/nlab/show/set+theory'>set-theoretic</a> <a class='existingWikiWord' href='/nlab/show/map'>mapping</a> between the system of implicitly defined terms of a physical theory and some system of given objects or elements of sensation. A few years later, Hans Reichenbach, by contrast, argued (<a href='#Reichenbach24'>Reichenbach 24</a>) that the act of coordination was no mere mapping between existing systems, but itself played a constitutive role in defining the objects of knowledge themselves:</p>
 
 <blockquote>
 <p>The difficulty concerning coordinative definitions is similar to that concerning elementary facts: the physical thing that is coordinated is not an immediate perceptual experience but must be constructed from such experience by means of an interpretation. If I establish the coordinative definition “a light ray is a straight line”, then the coordinated physical thing, the light ray, is a construction going beyond perception. (<a href='#Reichenbach24'>1924</a>, p. 8)</p>
@@ -1026,7 +1026,7 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 03:55:51 
+  Revised on October 19, 2017 04:02:49 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
