--- a/pages/10428.html
+++ b/pages/10428.html
@@ -956,6 +956,10 @@ margin-left: 0em;
 
 <p>For example an abstract <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a> on the <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of some abstract <a class='existingWikiWord' href='/nlab/show/fiber+bundle'>fiber bundle</a> does not constitute a theory of physics unless one specifies which kind of <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>physical field</a> these sections are meant to represent.</p>
 
+<p>The nature of the field however determines a rule for how to measure it: If we are told that the theory is meant to be about the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, say <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a>, we test it by measuring, say, <a class='existingWikiWord' href='/nlab/show/Lorentz+force'>Lorentz forces</a> on <a class='existingWikiWord' href='/nlab/show/electron'>electrons</a>; while if we are told that the theory is meant to be about <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, say <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a>, we test it by entirely different measurements (e.g. via the <a class='existingWikiWord' href='/nlab/show/LIGO'>LIGO</a> experiment).</p>
+
+<p>But this distinction may not be reflected in the plain <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> that constitutes the physical, theory: In the previous example both <a class='existingWikiWord' href='/nlab/show/light'>electromagnetic waves</a> and <a class='existingWikiWord' href='/nlab/show/gravitational+wave'>gravitational waves</a> may be described, after appropriate <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a>, by the same kind of <a class='existingWikiWord' href='/nlab/show/wave+equation'>wave equation</a>. Hence <em>coordination</em> is involved in specifying what aspect of observable reality this equation is meant to be referring to.</p>
+
 <h2 id='history'>History</h2>
 
 <p>The term <em>coordination</em> is a translation of the German <em>Zuordnung</em>. The latter has a long history of use with <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> as something like <em>assignment</em>, hence <em><a class='existingWikiWord' href='/nlab/show/function'>function</a></em>. Its use in <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> stretches back to <a class='existingWikiWord' href='/nlab/show/Hermann+von+Helmholtz'>Hermann von Helmholtz</a>’s <em>Zeichentheorie</em>, and was taken up later by a number of philosophers, especially by those, such as Ernst Cassirer, trying to understand the implications for epistemology of the profound transformations which took place in mathematics and physics at the turn of the nineteenth century (<a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a>, <a class='existingWikiWord' href='/nlab/show/general+relativity'>general relativity</a>, <a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanics</a>).</p>
@@ -1019,21 +1023,25 @@ margin-left: 0em;
 <p>Thomas Ryckman (1991), <em>Conditio sine qua non? Zuordnung in the Early Epistemologies of Cassirer and Schlick</em>, Synthese 88(1), pp. 57-95.</p>
 </li>
 
-<li>
-<p id='Tanona10'><a class='existingWikiWord' href='/nlab/show/Scott+Tanona'>Scott Tanona</a>, <em>Theory, coordination, and empirical meaning in modern physics</em>, in Mary Domski and Michael Dickson (eds.), <em>Discourse on a New Method: Reinvigorating the Marriage of History and Philosophy of Science</em>. Open Court (2010), pp. 423-454.</p>
+<li id='Tanona10'>
+<p><a class='existingWikiWord' href='/nlab/show/Scott+Tanona'>Scott Tanona</a>, <em>Theory, coordination, and empirical meaning in modern physics</em>, in Mary Domski and Michael Dickson (eds.), <em>Discourse on a New Method: Reinvigorating the Marriage of History and Philosophy of Science</em>. Open Court (2010), pp. 423-454.</p>
+</li>
+
+<li id='Friedman99'>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+Friedman'>Michael Friedman</a>, <em>Poincaré’s Convetionalism and the logical positivists</em>, chapter 4 in <em>Reconsidering Logical Positivism</em>, Cambridge University Press 1999 (<a href='https://books.google.co.uk/books?id=e9TjZc9wNUAC&amp;pg=PA71#v=onepage&amp;q&amp;f=false'>web</a>)</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 04:02:49 
+  Revised on October 19, 2017 08:56:50 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  (192.76.172.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coordination" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordination/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/coordination" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordination" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/coordination" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coordination/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/coordination" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coordination" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
