--- a/pages/18697.html
+++ b/pages/18697.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      shuffle of trees in nLab
+      Paweł Duch in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      shuffle of trees
+      Paweł Duch
   </h1>
 
 
@@ -308,37 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='idea'>Idea</h2>
-
-<p>The generalization of the concept of <a class='existingWikiWord' href='/nlab/show/shuffle'>shuffles</a> to <a class='existingWikiWord' href='/nlab/show/tree'>trees</a>.</p>
-
-<h2 id='references'>References</h2>
-
-<ul>
-<li id='HoffbeckMoerdijk'><a class='existingWikiWord' href='/nlab/show/Eric+Hoffbeck'>Eric Hoffbeck</a>, <a class='existingWikiWord' href='/nlab/show/Ieke+Moerdijk'>Ieke Moerdijk</a>, <em>Shuffles of trees</em>, (<a href='https://arxiv.org/abs/1705.03638'>arXiv:1705.03638</a>).</li>
+    <ul>
+<li><a href='https://www.lqp2.org/user/1697'>webpage</a></li>
 </ul>
 
-<p>
-</p>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_ee40a9f9e59445d5188d7f028351c88dce8dd808_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/adiabatic+switching'>adiabatic limit</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infrared+divergence'>infrared divergency</a></p>
+</li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on October 19, 2017 08:48:03 
+  Created on October 19, 2017 08:22:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (192.76.172.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/shuffle+of+trees" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/shuffle+of+trees/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/shuffle+of+trees" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/shuffle+of+trees" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Pawe%C5%82+Duch" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/shuffle+of+trees" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Pawe%C5%82+Duch" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/shuffle+of+trees" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Pawe%C5%82+Duch" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/shuffle+of+trees" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Pawe%C5%82+Duch" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
