--- a/pages/5121.html
+++ b/pages/5121.html
@@ -310,24 +310,36 @@ margin-left: 0em;
 <div id="revision">
     <p>This entry is about the book</p>
 
-<ul id='AguiarMahajan'>
-<li><a class='existingWikiWord' href='/nlab/show/Marcelo+Aguiar'>Marcelo Aguiar</a>, <a class='existingWikiWord' href='/nlab/show/Swapneel+Mahajan'>Swapneel Mahajan</a>, <em>Monoidal Functors, Species and Hopf Algebras</em>, (<a href='http://www.math.cornell.edu/~maguiar/a.pdf'>author pdf</a>) finished May 2010, 784 pages.</li>
+<ul>
+<li id='AguiarMahajan'>
+<p><a class='existingWikiWord' href='/nlab/show/Marcelo+Aguiar'>Marcelo Aguiar</a>, <a class='existingWikiWord' href='/nlab/show/Swapneel+Mahajan'>Swapneel Mahajan</a>, <em>Monoidal Functors,</em></p>
+
+<p><em>Species and Hopf Algebras</em>,</p>
+
+<p>(<a href='http://www.math.cornell.edu/~maguiar/a.pdf'>author pdf</a>) finished May 2010, 784 pages.</p>
+</li>
 </ul>
 
-<p>on <a class='existingWikiWord' href='/nlab/show/monoidal+functor'>monoidal functors</a>, <a class='existingWikiWord' href='/nlab/show/species'>combinatorial species</a> and <a class='existingWikiWord' href='/nlab/show/Hopf+algebra'>Hopf algebra</a>s.</p>
+<p>on <a class='existingWikiWord' href='/nlab/show/monoidal+functor'>monoidal functors</a>, <a class='existingWikiWord' href='/nlab/show/species'>combinatorial species</a> and <a class='existingWikiWord' href='/nlab/show/Hopf+algebra'>Hopf algebras</a>.</p>
+
+<h2 id='related_entries'>related entries</h2>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/shuffle'>shuffle</a></li>
+</ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on November 18, 2016 07:04:03 
-  by <a class="existingWikiWord" href="/nlab/show/Noam+Zeilberger">Noam Zeilberger</a>
-  (147.188.194.204)
+  Revised on October 19, 2017 08:49:36 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (192.76.172.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Monoidal+Functors%2C+Species+and+Hopf+Algebras/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Monoidal+Functors%2C+Species+and+Hopf+Algebras/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Monoidal+Functors%2C+Species+and+Hopf+Algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
