--- a/pages/6042.html
+++ b/pages/6042.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -923,25 +923,28 @@ margin-left: 0em;
 <p>Discussion of Lorentz force from the point of view of the <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>Kaluza-Klein mechanism</a> is in</p>
 
 <ul>
-<li>David Bleecker, <em>Gauge theory and variational principles</em>, Dover publications, 1981.</li>
+<li id='Bleecker81'>David Bleecker, <em>Gauge theory and variational principles</em>, Dover publications, 1981.</li>
 </ul>
 
 <p>and exposition is in</p>
 
-<ul id='Bartlett13'>
-<li><a class='existingWikiWord' href='/nlab/show/Bruce+Bartlett'>Bruce Bartlett</a>, <em>The geometry of force</em>, Sept 2013 (<a href='https://dl.dropboxusercontent.com/u/56141091/Lorentz.pdf'>pdf</a>).</li>
+<ul>
+<li id='Bartlett13'><a class='existingWikiWord' href='/nlab/show/Bruce+Bartlett'>Bruce Bartlett</a>, <em>The geometry of force</em>, Sept 2013 (<a href='https://dl.dropboxusercontent.com/u/56141091/Lorentz.pdf'>pdf</a>).</li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on September 22, 2013 19:06:06 
+  Revised on October 19, 2017 08:37:21 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.139.76)
+  (192.76.172.80)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Lorentz+force" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorentz+force/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Lorentz+force" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorentz+force" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Lorentz+force" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Lorentz+force/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Lorentz+force" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Lorentz+force" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
