--- a/pages/18555.html
+++ b/pages/18555.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,22 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>I am a mathematician currently working as a postdoc in the mathematical institute of Charles University (Prague, Czech Republic). Here is my <a href='https://sites.google.com/site/anthonybordg/home'>web page</a>. My primary fields of research are the <a href='https://en.wikipedia.org/wiki/Univalent_foundations'>Univalent Foundations</a> and <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a>, in particular the semantics of the Univalent Foundations and the formalization of mathematics using the <a class='existingWikiWord' href='/nlab/show/unimath'>unimath</a> library.</p>
-
-<p>Below I will try to write down some notes on various topics, ranging from algebraic and arithmetic geometry, number theory to mathematical physics. You are very welcome to make comments, fill in the details, or make any relevant addition.</p>
-
-<p>When at some point a personal note will meet the content of an entry in the nlab, I will try to branch out into the main nLab.</p>
+    <p><a href='https://sites.google.com/site/anthonybordg/home'>webpage</a>.</p>
 </div>
 
 <div class="revisedby">
-  Created on August 20, 2017 07:43:38 
+  Revised on October 19, 2017 15:42:01 
   by <a class="existingWikiWord" href="/nlab/show/Anthony+Bordg">Anthony Bordg</a>
-  (109.22.253.132)
+  (195.113.30.252)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Anthony+Bordg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Anthony+Bordg" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Anthony+Bordg/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Anthony+Bordg" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Anthony+Bordg" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
